<resources>
    <string name="app_name">AI-Driving-App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registeration">Registeration</string>
    <string name="register">Register</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="login_btn">login</string>
    <string name="Confirm_email">Confirm Email</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="create_new_account">Create New account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_new_account_">Create New Account</string>
    <string name="already_registered_log_in_here">Already Registered?Log in here</string>
    <string name="todo">TODO</string>
    <string name="posted_number_of_hours_ago">Posted number of hours ago</string>
    <string name="news">NEWS!</string>
    <string name="actual_news_goes_here">Actual news goes here</string>
    <string name="welcome_jonee_doen">WELCOME\nJohn Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="occupation">Occupation</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="address">Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="chatbot_icon">Chatbot Icon</string>
    <string name="submit">Submit</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="report_details">REPORT DETAILS</string>
    <string name="the_incident">THE INCIDENT</string>
    <string name="the_time_of_accident">THE TIME OF ACCIDENT</string>
    <string name="injuries_and_summary">INJURIES AND SUMMARY</string>
    <string name="submit_info">SUBMIT</string>
    <string name="diplayingvapturedimage">diplayingVapturedImage</string>
    <string name="capture">Capture</string>
    <string name="splashscreeninit">TODO</string>
    <string name="sign_detection_menu">Sign Detection Menu</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="picture_mode">Picture Mode</string>

    <string name="google_map_API">AIzaSyD5QdIiBcHYhVunbhYlqUWO2cUI5sapSh8</string>
    <string name="traffic_rules_quiz">Traffic Rules Quiz</string>
</resources>