<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".profile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnFirstActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="641dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="238dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/occupation"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="313dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="393dp" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="474dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="565dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="145dp"
        app:srcCompat="@drawable/profile"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="76dp"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>