<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#000000"
    tools:context=".LRegister">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#FFA500"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:hint="@string/username"
        android:inputType="text"
        android:textStyle="bold"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:hint="@string/Email"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/ConfirmEmail"
        android:textStyle="bold"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:hint="@string/Confirm_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#A1887F" />

    <EditText
        android:id="@+id/Password"
        android:textStyle="bold"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_Register"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFB500"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
