<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#000000"
    tools:context=".Login">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFA500"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:padding="10dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:padding="10dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:textStyle="bold"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:text="@string/login_btn"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#FFA500"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp" />

</LinearLayout>
