<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".DisplayImageActivity">

    <ImageView
        android:id="@+id/captureImage"
        android:layout_width="308dp"
        android:layout_height="163dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="97dp"
        android:background="@color/green"
        android:scaleType="centerCrop"
        android:contentDescription="@string/diplayingvapturedimage"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="78dp"

        android:layout_marginBottom="477dp"
        android:text="@string/report_details"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/incidentInfo"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="411dp"
        android:text="@string/the_incident"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/incident_name"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="357dp"
        android:background="@drawable/rounded_corner_background"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/_summary"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="302dp"
        android:text="@string/injuries_and_summary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/incident_summary_msg"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="239dp"
        android:background="@drawable/rounded_corner_background"

        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/incident_time"
        android:layout_width="293dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="181dp"
        android:text="@string/the_time_of_accident"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/incident_time_info"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/rounded_corner_background"

        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/blue_circular_background"
        android:onClick="submitting"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/submit_info"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>

