<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F1F1F1"
    android:layout_height="match_parent">

    <!-- Toolbar -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#d1d4d9">

        <!-- Left side: Welcome message -->
        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="Welcome, User!"
            android:textColor="@android:color/black"
            android:textSize="26sp"/>

        <!-- Right side: Notification and Hamburger icons -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp">

            <!-- Notification icon -->
            <ImageView
                android:id="@+id/notificationIcon"
                android:layout_width="47dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/notification" />

            <!-- Hamburger icon -->
            <ImageView
                android:id="@+id/hamburgerIcon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_below="@id/notificationIcon"
                android:layout_marginTop="8dp"
                android:src="@drawable/hamburger" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="493dp"
        android:background="#E2EcEB"
        android:orientation="horizontal">

        <!-- First TextView for "NEWS!" with bold font -->

        <!-- Second TextView for the actual news -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />


        <!-- Third TextView for "Posted number of hours ago" in blue color -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/actual_news_goes_here"
            android:textColor="#000000" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="27dp"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="2dp"
            android:padding="4dp"
            android:text="@string/posted_number_of_hours_ago"
            android:textColor="#0000FF" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="327dp"
        android:layout_height="119dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="180dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="255dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.371"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454"
            app:srcCompat="@drawable/bulb" />
    </androidx.constraintlayout.widget.ConstraintLayout>

   



    <FrameLayout
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="358dp">

        <ImageView
            android:id="@+id/imageView6"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/stopsign" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="98dp"
        android:layout_height="82dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="356dp">

        <ImageView
            android:id="@+id/imageView8"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/map" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="88dp"
        android:layout_height="79dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="358dp">

        <ImageView
            android:id="@+id/imageView9"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/files" />
    </FrameLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#d1d4d9">

        <!-- Home Icon -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="Home Icon"
            android:padding="8dp"/>

        <!-- Chatbot Icon -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/chatbot"
            android:contentDescription="Chatbot Icon"
            android:padding="8dp"/>

        <!-- Settings Icon -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/settings"
            android:contentDescription="Settings Icon"
            android:padding="8dp"/>

        <!-- Profile Icon -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/profile_menu"
            android:contentDescription="Profile Icon"
            android:padding="8dp"/>
    </LinearLayout>





</RelativeLayout>

